added listener server socket

--- a/core/README
+++ b/core/README
@@ -1,1 +1,4 @@
 Server treatment information and const connect with database
+
+THANKS: https://rsdn.ru/article/unix/sockets.xml 
+	@author: Alexandr Shargin
